@@ -1,7 +1,3 @@
--card type cancelling erases all (bug report Gnome)
-
--mplayer video player
-
 -A, A::B issues (see bug report Gnome)
 -also for renaming tags
 -test / coverage
