@@ -142,6 +142,9 @@ class AddEditCards(TipAfterStartingNTimes):
         dlg = ConvertCardTypeKeysDlg(self.card_type, new_card_type,
             self.correspondence, check_required_fact_keys=False, parent=self)
         if dlg.exec_() != QtGui.QDialog.Accepted:
+            # Set correspondence so as not to erase previous data.
+            self.correspondence = {key: key \
+                for key in self.card_type.fact_keys()}
             self.card_types_widget.setCurrentIndex(self.card_type_index)
             return
         else:
