@@ -3,6 +3,8 @@
  Palm, Cuecard WCU.
 -Double-clicking on a saved set in 'Activate cards' now automatically selects
  the set and closes the window (requested by Michael Campbell).
+-Added support for video files under Windows (contrary to Linux, they will
+ play in an external window using mplayer).
 -In 'edit cards', make more robust of no longer warning about discarding
  changes if you did not make any.
 -Sped up deleting of large number of cards from the card browser.
@@ -13,6 +15,7 @@
  Campbell).
 -Fix another crash involving duplicates while converting cards (reported by
  Gnome).
+-Don't erase fields when cancelling a card type conversion (reported by Gnome).
 -Fix harmless error message when converting to Cloze cards in the card browser
  (reported by Michael Campbell).
 -Upgraded to lastest version of Qt/PyQt.
